# contract-monitoring-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml
bot_service/: bot.py  data_fetching.py  data_parsing.py  message_template.py
database/: crud.py  database.py  models.py  schemas.py
web3_service/: ABI.json  service.py
